# torchserve-example

./: .gitignore  pyproject.toml
minimal_example/: Makefile  README.md  handler.py
minimal_model_handler/: Makefile  handler.py
